# javascript-interface

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.rs  index.js  package.json  pnpm-lock.yaml  rolldown.config.ts  tsconfig.json
examples/: atba-raw.ts  start-match.ts
src/: connection.ts  index.ts  lib.rs  util.ts
src/flat/: index.ts
src/flat/flat/: aerial-goal-score-mutator.ts  air-state.ts  assist-goal-score-mutator.ts  audio-mutator.ts  ball-anchor.ts  ball-bounciness-mutator.ts  ball-gravity-mutator.ts  ball-info.ts  ball-max-speed-mutator.ts  ball-prediction.ts  ball-size-mutator.ts  ball-type-mutator.ts  ball-weight-mutator.ts  boost-amount-mutator.ts  boost-pad-state.ts  boost-pad.ts  boost-strength-mutator.ts  box-shape.ts  car-anchor.ts  collision-shape.ts  color.ts  connection-settings.ts  console-command.ts  controllable-info.ts  controllable-team-info.ts  controller-state.ts  core-message.ts  core-packet.ts  custom-bot.ts  cylinder-shape.ts  debug-rendering.ts  demolish-mutator.ts  demolish-score-mutator.ts  desired-ball-state.ts  desired-car-state.ts  desired-game-state.ts  desired-match-info.ts  desired-physics.ts  disconnect-signal.ts  dodge-timer-mutator.ts  (+74 more)
